Fix social buttons width on mobile

--- a/app/assets/stylesheets/mobile/login-signup-page.scss
+++ b/app/assets/stylesheets/mobile/login-signup-page.scss
@@ -94,6 +94,7 @@
   .login-right-side {
     padding: 1rem 0 0;
     background: unset;
+    max-width: unset;
   }
 
   .login-or-separator {
